<resources>
    <string name="app_name">Vietcombank</string>
    <string name="title_bank">Welcome to VCB Digibank service</string>
    <string name="btn_login_accept">Continue</string>
    <string name="experience_VCB">VCB Digibank demo version</string>
    <string name="offer_open_account">Open an account/Register VCB Digibank</string>
    <string name="conversion_guide">VCB Digibank conversion guide</string>
    <string name="make_appointment">VCB Booking</string>
    <string name="search_brand">Search for ATM/branch nearby</string>
    <string name="language_swt">Tiếng Việt</string>
    <string name="hint_account_login">Username</string>
    <string name="suggestions_hint">(Enter the registered phone number)</string>
</resources>