<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#73A375"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo_global"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/global"
        app:layout_constraintEnd_toStartOf="@id/switch_languages"
        app:layout_constraintTop_toTopOf="@id/switch_languages"
        app:layout_constraintBottom_toBottomOf="@id/switch_languages"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/language_swt" />

    <Button
        android:id="@+id/switch_languages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_swt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        />

    <ImageView
        android:id="@+id/logo_vcb"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:src="@drawable/logo_vcb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_bank"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/logo_vcb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/edt_username"
        android:background="@drawable/custom_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_title"
        android:hint="@string/hint_account_login"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="30dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textSize="16sp"
        android:autofillHints="phone"
        android:inputType="phone"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/suggestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suggestions_hint"
        app:layout_constraintTop_toBottomOf="@id/edt_username"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/edt_username"
        android:layout_marginTop="5dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:background="@drawable/custom_btn"
        android:id="@+id/btn_accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_accept"
        app:layout_constraintTop_toBottomOf="@id/suggestion"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/ex_VCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/experience_VCB"
        android:textColor="#6BE87F"
        app:layout_constraintTop_toBottomOf="@id/btn_accept"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/open_account"
        android:text="@string/offer_open_account"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@id/ex_VCB"
        app:layout_constraintStart_toStartOf="@id/ex_VCB"
        app:layout_constraintEnd_toEndOf="@id/ex_VCB"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/conversion"
        android:text="@string/conversion_guide"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/open_account"
        app:layout_constraintStart_toStartOf="@id/open_account"
        app:layout_constraintEnd_toEndOf="@id/open_account"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/appointment"
        android:text="@string/make_appointment"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/conversion"
        app:layout_constraintStart_toStartOf="@id/conversion"
        app:layout_constraintEnd_toEndOf="@id/conversion"
        android:textSize="16sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>